[package]
edition = "2021"
name = "f289ctrl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
clap = {version = "4.1.1", features = ["cargo", "string"]}
futures = "0.3.25"
thiserror = "1.0"
tokio = {version = "1.24.2", features = ["full"]}
tokio-serial = "5.4.1"
tokio-util = {version = "0.7.4", features = ["codec"]}
chrono = "0.4.23"
