[package]
categories = ["asynchronous"]
description = "Communication library for Fluke 289 digital multimeter"
edition = "2021"
homepage = "https://github.com/cytrinox/f289ctrl"
keywords = ["fluke", "dmm"]
license = "MIT"
name = "f289ctrl"
readme = "README.md"
repository = "https://github.com/cytrinox/f289ctrl"
rust-version = "1.63"
version = "0.1.0"

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
chrono = "0.4.23"
clap = {version = "4.4", features = ["cargo", "string"]}
futures = "0.3.25"
thiserror = "1.0"
tokio = {version = "1.24.2", features = ["full"]}
tokio-serial = "5.4.1"
tokio-util = {version = "0.7.4", features = ["codec"]}
